--- a/services/website/default.css
+++ b/services/website/default.css
@@ -67,9 +67,12 @@ div.footnotes p {
 
 div#header { 
    width: 100%;
-   text-align: center;
-   background: #DDD;
+   background: #ACF;
+}
+
+div#header h1 {
    margin: 0;
+   padding: 10px 100px;
 }
 
 div#footer { border-top: solid 4px #666; }
