Add home link, use em instead of px, link consistency
Ignore-this: 1a8ec76d9940f18ceccacb2c59b11999

darcs-hash:4ba1c0b6b520f8a94da6c5bfb420ab0e3f3829eb

--- a/services/website/default.css
+++ b/services/website/default.css
@@ -61,6 +61,10 @@ th {
     font-weight: normal;
 }
 
+th a { color: white; }
+
+th a:hover { color: #FA2; }
+
 div.footnotes p {
     text-indent: 0px;
 }
@@ -72,7 +76,7 @@ div#header {
 
 div#header h1 {
    margin: 0;
-   padding: 10px 100px;
+   padding: 0.2em 3em;
 }
 
 div#footer { border-top: solid 4px #666; }
