Add status to header for datasets
Ignore-this: 62d1be5c1a33d513add30e243e888e43

darcs-hash:a5604c9c5bd40e90f43e0e161486f79194d30153

--- a/services/website/default.css
+++ b/services/website/default.css
@@ -77,8 +77,12 @@ div#header h1 {
    padding: 0.2em 3em;
 }
 
-div#header h1 {
-   margin: 0;
+.error {
+   color: #C00;
+}
+
+.warn {
+  color: #AA0;
 }
 
 div#footer { border-top: solid 4px #666; }
