--- a/services/website/default.css
+++ b/services/website/default.css
@@ -68,7 +68,7 @@ div.footnotes p {
 
 div#header { 
    width: 100%;
-   background: #ACF;
+   background: linear-gradient(#8AD,white);
    margin: 0 0 20px 0;
 }
 
