add classes for different type of links, color them garishly
Ignore-this: 8454684ee63db530375d98f97a305dab

darcs-hash:29a85a07f7dabf26a3b00d6ed5f278e8d8a25168

--- a/services/website/default.css
+++ b/services/website/default.css
@@ -153,3 +153,12 @@ div.figure p {
    font-style: italic;
    width: 340px;
 }
+
+a.dataset {
+   color: #080;
+}
+
+a.species {
+   color: #550;
+}
+
